--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-
+    <h1>Hi. I'm Kathy.</h1>
+    <h2>Welcome</h2>
   </body>
 </html>
